Fixed up the site a little, got more things aligned

--- a/css/styles2.css
+++ b/css/styles2.css
@@ -228,9 +228,28 @@ strong {
   font-weight: 500;
 }
  
-section#contact {
+#contact {
   margin-bottom: 200px;
 } 
+
+#contact .left {
+  float: left;
+  width: 600px;
+}
+
+#contact .right {
+  float: right;
+  width: 300px;
+}
+
+#contact .right p {
+  display: block;
+  margin: 20px 0px;
+  background: #f2f2f2;
+  padding: 7px 5px 10px 5px;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+}
 
 section#services li {
   width: 300px;
@@ -406,14 +425,18 @@ section#why li h4 {
 }
 
 section #showcase_wrapper {
-  width: 910px;
+  width: 910x;
   margin: 0 -20px;
-  padding: 0 40px;
+  padding: 0 0 0 10px;
 } 
 
-section#showcase .site {
+#showcase .site {
   display: inline-block;
-  margin: 12px;
+  width: 300px;
+  margin: 10px;
+}
+
+#showcase .site img {
   padding: 4px;
   border: 1px solid #d2d2d2;
   -moz-box-shadow: inset 0 0 4px #d2d2d2;
@@ -428,3 +451,31 @@ section a {
 section a:hover {
   border-bottom: 1px solid #2c3245;
 }
+
+#thebear {
+  float: right;
+  height: 300px;
+}
+
+.field {
+  margin-top: 15px;
+}
+
+form input[type=text], form textarea {
+  margin-top: 10px;
+  font-size: 16pt;
+  padding: 5px;
+  border: 1px solid #ccc;
+  box-shadow: 0px 0px 3px #ccc;
+}
+
+form input[type=text] {
+  width: 300px;
+}
+
+form textarea {
+  width: 500px;
+  height: 300px;
+}
+
+.clear { clear: both }
